hphp/test/quick/asm_types.hhas.expectf
Warning: Argument 1 to use_class() must be of type @C, null given in %s on line 32

Warning: Argument 1 to use_int_soft() must be of type @int, HH\dict given in %s on line 32

Warning: Argument 1 to use_int_soft() must be of type @int, null given in %s on line 32

Catchable fatal error: Argument 1 passed to use_int() must be an instance of int, HH\dict given in %s on line 32
